Old style global (globals.x) did not show in relation editor